Date filtering with new EventFilters activity added.

--- a/app/src/main/res/layout/activity_event_filter.xml
+++ b/app/src/main/res/layout/activity_event_filter.xml
@@ -5,16 +5,17 @@
     android:background="#000000">
 
     <TextView
-        android:layout_width="195dp"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:id="@+id/filterDistance"
-        android:text="Distance [km]"
-        android:textSize="25sp"
+        android:text="Távolság [km]"
+        android:textSize="20sp"
         android:singleLine="true"
         android:textAlignment="textEnd"
         android:contextClickable="true"
         android:paddingTop="10dp"
-        android:textColor="#ffffff"/>
+        android:textColor="#ffffff"
+        android:layout_alignParentTop="true" />
 
     <EditText
         android:layout_width="50dp"
@@ -22,52 +23,59 @@
         android:inputType="number"
         android:ems="10"
         android:id="@+id/filteredDistance"
-        android:textSize="25sp"
+        android:textSize="20sp"
         android:text="40"
         android:textColor="#ffffff"
+        android:maxLength="3"
+        android:layout_marginLeft="23dp"
+        android:layout_marginStart="23dp"
         android:layout_alignParentTop="true"
         android:layout_toRightOf="@+id/filterDistance"
-        android:layout_toEndOf="@+id/filterDistance"
-        android:layout_marginLeft="49dp"
-        android:layout_marginStart="49dp" />
+        android:layout_toEndOf="@+id/filterDistance" />
 
     <SeekBar
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/seekBar"
+        android:id="@+id/seekDistance"
         android:layout_below="@+id/filteredDistance"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:max="1000"
-        android:progress="500"
+        android:max="500"
+        android:progress="50"
         android:indeterminate="false" />
 
     <TextView
         android:layout_width="195dp"
         android:layout_height="wrap_content"
         android:id="@+id/filterDate"
-        android:text="Datum"
-        android:textSize="25sp"
+        android:text="Dátum"
+        android:textSize="20sp"
         android:singleLine="true"
         android:textAlignment="textEnd"
         android:contextClickable="true"
-        android:paddingTop="10dp"
-        android:layout_below="@+id/seekBar"
+        android:paddingTop="0dp"
+        android:layout_marginTop="30dp"
+        android:textColor="#ffffff"
+        android:layout_below="@+id/seekDistance"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="20dp"
-        android:textColor="#ffffff" />
+        android:layout_alignRight="@+id/filterDistance"
+        android:layout_alignEnd="@+id/filterDistance" />
 
-    <EditText
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="onClick"
+        android:clickable="true"
         android:inputType="date"
         android:ems="10"
+        android:textSize="20sp"
         android:id="@+id/filteredDate"
         android:textColor="#ffffff"
-        android:layout_alignTop="@+id/filterDate"
+        android:text="2016.04.03."
+        android:layout_alignBottom="@+id/filterDate"
         android:layout_alignLeft="@+id/filteredName"
         android:layout_alignStart="@+id/filteredName" />
 
@@ -75,15 +83,19 @@
         android:layout_width="195dp"
         android:layout_height="wrap_content"
         android:id="@+id/filterName"
-        android:text="Place Name"
-        android:textSize="25sp"
+        android:text="Hely"
+        android:textSize="20sp"
         android:singleLine="true"
         android:textAlignment="textEnd"
         android:contextClickable="true"
         android:paddingTop="10dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="30dp"
+        android:textColor="#ffffff"
         android:layout_below="@+id/filteredDate"
-        android:textColor="#ffffff" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_toLeftOf="@+id/filteredDistance"
+        android:layout_toStartOf="@+id/filteredDistance" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -91,7 +103,7 @@
         android:id="@+id/filteredName"
         android:textColor="#ffffff"
         android:text="Kraft"
-        android:textSize="25dp"
+        android:textSize="20sp"
         android:layout_alignTop="@+id/filterName"
         android:layout_alignLeft="@+id/filteredDistance"
         android:layout_alignStart="@+id/filteredDistance" />
