--- a/app/src/main/res/layout/activity_event_filter.xml
+++ b/app/src/main/res/layout/activity_event_filter.xml
@@ -102,11 +102,13 @@
         android:layout_height="wrap_content"
         android:id="@+id/filteredName"
         android:textColor="#ffffff"
-        android:text="E"
+        android:text=""
         android:textSize="20sp"
         android:layout_alignTop="@+id/filterName"
         android:layout_alignLeft="@+id/filteredDistance"
-        android:layout_alignStart="@+id/filteredDistance" />
+        android:layout_alignStart="@+id/filteredDistance"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
     <ListView
         android:layout_width="wrap_content"
@@ -118,6 +120,22 @@
         android:background="#5c5c5c"
         android:contextClickable="true"
         android:footerDividersEnabled="true" />
+
+    <ImageButton
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:id="@+id/searchButton"
+        android:layout_gravity="bottom|center"
+        android:layout_weight="0.07"
+        android:src="@android:drawable/ic_menu_search"
+        style="@style/Base.Widget.AppCompat.ImageButton"
+        android:baseline="@dimen/abc_action_button_min_width_overflow_material"
+        android:cropToPadding="false"
+        android:background="@drawable/datecard"
+        android:backgroundTint="#ffe600"
+        android:layout_alignParentBottom="true"
+        android:layout_toRightOf="@+id/filterName"
+        android:layout_toEndOf="@+id/filterName" />
 
 
 </RelativeLayout>
