--- a/app/src/main/res/values-hu/strings-hu.xml
+++ b/app/src/main/res/values-hu/strings-hu.xml
@@ -9,4 +9,5 @@
     <string name="event_attending">résztvevő</string>
     <string name="current_place">Jelenlegi pozíció</string>
     <string name="title_filter_options">Szűrőbeállítások</string>
+    <string name="no_event_notify">Nem talált bulit</string>
 </resources>
