--- a/app/src/main/res/values-hu/strings-hu.xml
+++ b/app/src/main/res/values-hu/strings-hu.xml
@@ -2,7 +2,7 @@
     <string name="app_name">PartyKalauz</string>
     <string name="action_settings">Beállítások</string>
     <string name="title_activity_event_view">Esemény Nézet</string>
-    <string name="title_activity_calendar_view">Válassz dátumot</string>
+    <string name="title_activity_calendar_view">Szűrőbeállítások</string>
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
     <string name="title_activity_event_map">Esemény Térkép</string>
