--- a/app/src/main/res/layout/activity_event_filter.xml
+++ b/app/src/main/res/layout/activity_event_filter.xml
@@ -8,25 +8,31 @@
         android:layout_height="wrap_content"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:layout_scrollFlags="scroll|enterAlways"
-            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
-
         <android.support.design.widget.TabLayout
             android:id="@+id/tabs"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:tabMode="fixed"
-            app:tabGravity="fill"/>
+            app:tabGravity="fill"
+            android:fillViewport="false"
+            android:theme="@style/TabLayoutStyle" />
     </android.support.design.widget.AppBarLayout>
 
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"  />
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+
+    1    <ImageButton
+    android:layout_width="50dp"
+    android:layout_height="50dp"
+    android:id="@+id/searchButton"
+    android:layout_gravity="bottom|center"
+    android:layout_weight="0.07"
+    android:src="@mipmap/ic_check_circle_white_48dp"
+    style="@style/Base.Widget.AppCompat.ImageButton"
+    android:baseline="@dimen/abc_action_button_min_width_overflow_material"
+    android:cropToPadding="false"
+    android:background="@drawable/datecard" />
 </android.support.design.widget.CoordinatorLayout>
