--- a/app/src/main/res/layout/event.xml
+++ b/app/src/main/res/layout/event.xml
@@ -7,7 +7,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/back_image"
-        android:background="#0090ff" />
+        android:background="#929494" />
 
     <TextView
         android:layout_width="wrap_content"
