--- a/app/src/main/res/layout/frag_filter_date.xml
+++ b/app/src/main/res/layout/frag_filter_date.xml
@@ -2,43 +2,25 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="195dp"
-        android:layout_height="wrap_content"
-        android:id="@+id/filterDate"
-        android:text="Dátum"
-        android:textSize="20sp"
-        android:singleLine="true"
-        android:textAlignment="textEnd"
-        android:contextClickable="true"
-        android:paddingTop="0dp"
-        android:layout_marginTop="30dp"
-        android:textColor="#ffffff"
+
+
+    <partykalauz.hu.partykalauz.CalendarViewScrollable
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:id="@+id/calendarView"
+        android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        />
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:background="#ffffff"
+        android:nestedScrollingEnabled="false"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:weightSum="1"
+        android:baselineAligned="false">
 
-    <TextView
-        android:layout_width="126dp"
-        android:layout_height="wrap_content"
-        android:onClick="onClick"
-        android:clickable="true"
-        android:inputType="date"
-        android:ems="10"
-        android:textSize="20sp"
-        android:id="@+id/filteredDate"
-        android:textColor="#ffffff"
-        android:text="2016.04.03."
-        android:layout_gravity="center_horizontal" />
-    <ImageButton
-        android:layout_width="52dp"
-        android:layout_height="50dp"
-        android:id="@+id/searchButton"
-        android:layout_gravity="bottom|center"
-        android:src="@android:drawable/ic_menu_search"
-        style="@style/Base.Widget.AppCompat.ImageButton"
-        android:baseline="@dimen/abc_action_button_min_width_overflow_material"
-        android:background="@drawable/datecard"
-        android:backgroundTint="#ffe600" />
+
+    </partykalauz.hu.partykalauz.CalendarViewScrollable>
+
 
 </RelativeLayout>
