--- a/app/src/main/res/layout/frag_filter_distance.xml
+++ b/app/src/main/res/layout/frag_filter_distance.xml
@@ -11,7 +11,7 @@
         android:singleLine="true"
         android:textAlignment="textEnd"
         android:contextClickable="true"
-        android:paddingTop="10dp"
+        android:paddingTop="20dp"
         android:textColor="#ffffff"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
@@ -30,8 +30,11 @@
         android:textColor="#ffffff"
         android:maxLength="3"
         android:layout_alignTop="@+id/filterDistance"
-        android:layout_centerHorizontal="true"
-        android:layout_gravity="center_horizontal" />
+        android:layout_toRightOf="@id/filterDistance"
+        android:layout_gravity="center_horizontal"
+        android:paddingTop="10dp"
+        android:paddingLeft="10dp"
+        android:layout_marginLeft="60dp" />
 
     <SeekBar
         android:layout_width="369dp"
@@ -41,8 +44,11 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
+        android:layout_below="@id/filterDistance"
         android:max="500"
         android:progress="50"
-        android:indeterminate="false" />
+        android:indeterminate="false"
+        android:paddingTop="20dp"
+        android:layout_marginTop="20dp" />
 
 </RelativeLayout>
