--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,9 @@
 <resources>
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#90C3D4</color>
+    <color name="white">#ffffff</color>
+    <color name="black_overlay">#000000</color>
+    <color name="green">#55ff55</color>
 
-    <color name="black_overlay">#66000000</color>
 </resources>
